@@ -1,3 +1,12 @@
+2003-05-05  Earnie Boyd  <earnie@users.sf.net>
+
+	* Makefile.in (W32API_INCLUDE): New variable.
+	(ALL_CFLAGS): Include W32API_INCLUDE value.
+	(ALL_CXXFLAGS): Ditto.
+	* configure.in (CFLAGS): Add -D__USE_CRTIMP=1 to default values.
+	(W32API_INCLUDE): Set default value.
+	* configure: Regenerate.
+	
 2003-04-11  Earnie Boyd  <earnie@users.sf.net>
 
 	* configure.in (LIBM_A): Define for cygwin target.
